--- a/conocimientos/proyectos/sistema/css/movil.css
+++ b/conocimientos/proyectos/sistema/css/movil.css
@@ -56,12 +56,24 @@ ul {
     text-align: center;
 }
 
+.title-project {
+  text-align: center;
+}
+
+.github-icon {
+    width: 80px;
+    height: 40px;
+    float: right;
+    margin-top: 10px;
+}
+
 .text-principal {
     margin-left: 40px;
     margin-right: 40px;
     /*font-family: sans-serif;*/
     font-weight: bold;
     margin-bottom: -200px;
+    margin-top: 50px;
 }
 
 h1 {
@@ -70,7 +82,7 @@ h1 {
     font-weight: bold;
     margin-bottom: 20px;
     margin-top: 20px;
-    
+
 }
 
 .separa {
@@ -93,7 +105,7 @@ h1 {
     height: 200px;
     padding-right: 10px;
     padding-left: 10px;
-    
+
 }
 
 .text-principal {
@@ -115,7 +127,7 @@ h1 {
     width: 100%;
     height: auto;
     margin-top: 50px;
-    
+
 }
 
 .filaB img {
@@ -123,7 +135,7 @@ h1 {
     height: 200px;
     text-align: center;
     margin: auto;
-    
+
 }
 
 .filaB p {
@@ -156,7 +168,7 @@ h1 {
 footer {
     width: 100%;
     height: 100px;
-    background-color: #363434; 
+    background-color: #363434;
     margin-top: 30px;
 }
 
@@ -176,8 +188,8 @@ footer {
 }
 
 .links_foteer {
-    width:35px; 
-    height: 35px; 
+    width:35px;
+    height: 35px;
     margin-top:10px;
     transition: fill .3s ease-out;
 }
