--- a/conocimientos/proyectos/sistema/css/tablet.css
+++ b/conocimientos/proyectos/sistema/css/tablet.css
@@ -17,14 +17,14 @@ body {
     width: 100%;
     height: 100px;
     margin: 0;
-    
+
 }
 
 .cuadro-superior {
     width: 650px;
     height: 100px;
     margin: auto;
-    
+
 }
 
 .logo {
@@ -129,7 +129,7 @@ a {
 
 .menu nav ul li:hover {
     color: black;
-    
+
 }
 
 
@@ -139,7 +139,7 @@ a {
     width: 100%;
     height: auto;
     margin-top: 50px;
-    
+
 }
 
 .cuerpo2 {
@@ -162,7 +162,7 @@ h1 {
     font-weight: bold;
     margin-top: 20px;
     margin-bottom: 20px;
-    
+
 }
 
 
@@ -170,7 +170,7 @@ h1 {
     width: 100%;
     height: 200px;
     margin-top: 40px;
-    
+
 }
 
 .filaA img {
@@ -179,7 +179,14 @@ h1 {
     float: left;
     padding-right: 50px;
     padding-left: 30px;
-    
+
+}
+
+.github-icon {
+    width: 80px;
+    height: 40px;
+    float: right;
+    margin-top: -10px;
 }
 
 .text-principal {
@@ -200,9 +207,9 @@ h1 {
 .filaB {
     width: 100%;
     height: 200px;
-    
+
     margin-top: 40px;
-    
+
 }
 
 .filaB img {
@@ -211,7 +218,7 @@ h1 {
     float: right;
     padding-right: 50px;
     padding-left: 30px;
-    
+
 }
 
 .filaB p {
@@ -243,7 +250,7 @@ h1 {
 footer {
     width: 100%;
     height: 100px;
-    background-color: #363434; 
+    background-color: #363434;
     margin-top: 40px;
 }
 
@@ -264,8 +271,8 @@ footer {
 }
 
 .links_foteer {
-    width:35px; 
-    height: 35px; 
+    width:35px;
+    height: 35px;
     margin-top:10px;
     transition: fill .3s ease-out;
 }
